# ca-biositing

./: .codespellrc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  datamodels  mkdocs.yml  patch_mv_biomass_composition.py  patch_mv_biomass_volume_estimate.py  pipeline  pixi.toml  pr_description.md  readthedocs.yaml  skills-lock.json  skills.json  skills.py  skills.sh  test_plotly_bdata.py  webservice
.devcontainer/: devcontainer.json  onCreate.sh
agent_docs/: etl_creation_guide.md  etl_kickoff_food_processors.md  etl_kickoff_processors.md  etl_kickoff_template.md  etl_provenance_checklist.md  gx_alignment_strategy.md
alembic/: README
analysis/: aim_record_distribution_calorimetry_viz.py  aim_record_distribution_compositional_viz.py  aim_record_distribution_fermentation_viz.py  aim_record_distribution_gasification_viz.py  aim_record_distribution_icp_viz.py  aim_record_distribution_pretreatment_viz.py  aim_record_distribution_ultimate_viz.py  aim_record_distribution_viz.py  aim_record_distribution_xrd_viz.py  aim_record_distribution_xrf_viz.py  audit_profiling_output.txt  biomass_composition_3d_viz.py  biomass_composition_distribution.py  biomass_xylan_glucan_viz.py  data_summary_viz.py  database_metadata_dashboard.py  portal_biomass_composition_distribution.py  sample_lineage_flow_viz.py  strawberry_acreage_heatmap.py  viz_county_biomass.py  xrf_distribution_viz.py  xrf_si_k_distribution_viz.py
src/ca_biositing/visualization/: README.md  pyproject.toml
src/ca_biositing/visualization/ca_biositing/visualization/: theme.py
(+617 files in other folders)
