[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-biositing-visualization"
version = "0.1.0"
description = "Visualization and reporting tools for the CA Biositing project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ca-biositing-datamodels",
]

[tool.hatch.build.targets.wheel]
packages = ["ca_biositing"]
